--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@
                     'Authorization': `Bearer ${openaiKey}`
                 },
                 body: JSON.stringify({
-                    model: 'gpt-4o-mini',
+                    model: 'gpt-4o',
                     messages: [{
                         role: 'system',
                         content: 'You are a mystical oracle. Always respond with valid JSON containing "text" and "advice" fields.'
